--- a/FundamentosAPI/index.html
+++ b/FundamentosAPI/index.html
@@ -14,27 +14,22 @@
             <img id="img1" width="300" alt="hola">
             <button>Guardar foto</button>
         </article>
-        <section id="randomMichis">
-            <article>
-                <img id="img2" width="300" alt="hola">
-                <button>Guardar foto</button>
-            </article>
-            <section id="randomMichis">
-                <article>
-                    <img id="img3" width="300" alt="hola">
-                    <button>Guardar foto</button>
-                </article>
+        <article>
+            <img id="img2" width="300" alt="hola">
+            <button>Guardar foto</button>
+        </article>
 
-                <button onclick="reload()">reload</button>
-            </section>
-            <section id="favoritesMichis">
-                <h2>gatitos favoritos</h2>
-                <article>
-                    <img id="img3" width="300" alt="hola">
-                    <button>sacar foto</button>
-                </article>
-            </section>
-            <script src="./main.js"></script>
+
+        <button onclick="loadRandomMichis()">reload</button>
+    </section>
+    <section id="favoritesMichis">
+        <h2>gatitos favoritos</h2>
+        <article>
+            <img id="img3" width="300" alt="hola">
+            <button>sacar foto</button>
+        </article>
+    </section>
+    <script src="./main.js"></script>
 </body>
 
 </html>
