--- a/FundamentosAPI/index.html
+++ b/FundamentosAPI/index.html
@@ -10,13 +10,14 @@
 <body>
     <section id="randomMichis">
         <h2>gatitos aleatorios</h2>
+        <span id="error"></span>
         <article>
             <img id="img1" width="300" alt="hola">
-            <button>Guardar foto</button>
+            <button onclick="AddFavouriteMichi()">Guardar foto</button>
         </article>
         <article>
             <img id="img2" width="300" alt="hola">
-            <button>Guardar foto</button>
+            <button onclick="AddFavouriteMichi()">Guardar foto</button>
         </article>
 
 
