--- a/FundamentosAPI/index.html
+++ b/FundamentosAPI/index.html
@@ -12,18 +12,18 @@
         <h2>gatitos aleatorios</h2>
         <span id="error"></span>
         <article>
-            <img id="img1" width="300" alt="hola">
-            <button onclick="AddFavouriteMichi()">Guardar foto</button>
+            <img id="img1" width="150" alt="hola">
+            <button id="btn1" >Guardar foto</button>
         </article>
         <article>
-            <img id="img2" width="300" alt="hola">
-            <button onclick="AddFavouriteMichi()">Guardar foto</button>
+            <img id="img2" width="150" alt="hola">
+            <button id="btn2" >Guardar foto</button>
         </article>
 
 
         <button onclick="loadRandomMichis()">reload</button>
     </section>
-    <section id="favoritesMichis">
+    <section id="favoriteMichis">
         <h2>gatitos favoritos</h2>
         <article>
             <img id="img3" width="300" alt="hola">
