--- a/FundamentosAPI/index.html
+++ b/FundamentosAPI/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <section id="randomMichis">
-        <h2>gatitos aleatorios</h2>
+        <h2>aleatorios</h2>
         <span id="error"></span>
         <article>
             <img id="img1" width="150" alt="hola">
@@ -24,10 +24,10 @@
         <button onclick="loadRandomMichis()">reload</button>
     </section>
     <section id="favoriteMichis">
-        <h2>gatitos favoritos</h2>
+        <h2>favoritos</h2>
         <article>
             <img id="img3" width="300" alt="hola">
-            <button>sacar foto</button>
+            <button id="btn_delete">sacar foto</button>
         </article>
     </section>
     <script src="./main.js"></script>
