--- a/FundamentosAPI/index.html
+++ b/FundamentosAPI/index.html
@@ -30,6 +30,16 @@
             <button id="btn_delete">sacar foto</button>
         </article>
     </section>
+    <section id="uploadMichi">
+        <h2>subir foto</h2>
+
+        <form id="uploadForm">
+            <input id="file" type="file" name="file">
+            <button type="button" onclick="uploadMichi()" >submit</button>
+        </form>
+    </section>
+
+
     <script src="./main.js"></script>
 </body>
 
