--- a/curso-api-practico/index.html
+++ b/curso-api-practico/index.html
@@ -38,7 +38,7 @@
           alt="Nombre de la película"
         />
       </div>
-
+<!-- 
       <div class="movie-container">
         <img
           src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg"
@@ -53,7 +53,7 @@
           class="movie-img"
           alt="Nombre de la película"
         />
-      </div>
+      </div> -->
     </article>
   </section>
 
