--- a/curso-api-practico/index.html
+++ b/curso-api-practico/index.html
@@ -55,18 +55,11 @@
     <h2 class="categoriesPreview-title">Categorías</h2>
 
     <article class="categoriesPreview-list">
-      <div class="category-container">
+      <!-- <div class="category-container">
         <h3 id="id28" class="category-title">Romance</h3>
-      </div>
+      </div> -->
 
-      <div class="category-container">
-        <h3 id="id16" class="category-title">Drama</h3>
-      </div>
-
-      <div class="category-container">
-        <h3 id="id14" class="category-title">Acción</h3>
-      </div>
-    </article>
+      </article>
   </section>
 
   <section id="genericList" class="genericList-container inactive">
@@ -147,8 +140,10 @@
     </article>
   </section>
 
-  <footer>Hecho con amor en Platzi por @juandc</footer>
+  <footer>Hecho por @alfreb</footer>
   
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+
   <script src="./src/secret-keys.js"></script>
   <script src="./src/keys.js"></script>
   <script src="./src/main.js"></script>
