--- a/curso-api-practico/index.html
+++ b/curso-api-practico/index.html
@@ -147,5 +147,7 @@
   <script src="./src/secret-keys.js"></script>
   <script src="./src/keys.js"></script>
   <script src="./src/main.js"></script>
+  <script src="./src/navigation.js"></script>
+
 </body>
 </html>
